{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 100,
  "lineage": "333600e3-3f35-eca4-e927-87ae5c02ae26",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:network-acl/acl-06c2f2893f7b98035",
            "default_network_acl_id": "acl-06c2f2893f7b98035",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06c2f2893f7b98035",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "157899031549",
            "subnet_ids": [
              "subnet-01b57272e46cb0aa4",
              "subnet-0ae37b3514ffca253",
              "subnet-0c81824a6492c1a48",
              "subnet-0dbb9e25fc8be68ae"
            ],
            "tags": {
              "Name": "testnet-vpc-default"
            },
            "tags_all": {
              "Name": "testnet-vpc-default"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:route-table/rtb-03b34d60b0ffe6513",
            "default_route_table_id": "rtb-03b34d60b0ffe6513",
            "id": "rtb-03b34d60b0ffe6513",
            "owner_id": "157899031549",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "testnet-vpc-default"
            },
            "tags_all": {
              "Name": "testnet-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:security-group/sg-04da978978e1d9509",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-04da978978e1d9509",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "157899031549",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testnet-vpc-default"
            },
            "tags_all": {
              "Name": "testnet-vpc-default"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c30e7de1cc540c89",
            "domain": "vpc",
            "id": "eipalloc-0c30e7de1cc540c89",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-216-113-195.compute-1.amazonaws.com",
            "public_ip": "44.216.113.195",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "testnet-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "testnet-vpc-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09259f85a9d9dc1d3",
            "domain": "vpc",
            "id": "eipalloc-09259f85a9d9dc1d3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-234-68-242.compute-1.amazonaws.com",
            "public_ip": "3.234.68.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "testnet-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "testnet-vpc-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:internet-gateway/igw-0b8545ca1f4cd00f3",
            "id": "igw-0b8545ca1f4cd00f3",
            "owner_id": "157899031549",
            "tags": {
              "Name": "testnet-vpc"
            },
            "tags_all": {
              "Name": "testnet-vpc"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c30e7de1cc540c89",
            "association_id": "eipassoc-0c86c8b504eb3d3e5",
            "connectivity_type": "public",
            "id": "nat-0c62cef4e2f487257",
            "network_interface_id": "eni-050ff81de953a3bbb",
            "private_ip": "10.0.101.162",
            "public_ip": "44.216.113.195",
            "subnet_id": "subnet-0c81824a6492c1a48",
            "tags": {
              "Name": "testnet-vpc-us-east-1a"
            },
            "tags_all": {
              "Name": "testnet-vpc-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09259f85a9d9dc1d3",
            "association_id": "eipassoc-0b780e41f11412134",
            "connectivity_type": "public",
            "id": "nat-0105080c96c3d696a",
            "network_interface_id": "eni-0de422957c2e95d7b",
            "private_ip": "10.0.102.125",
            "public_ip": "3.234.68.242",
            "subnet_id": "subnet-01b57272e46cb0aa4",
            "tags": {
              "Name": "testnet-vpc-us-east-1b"
            },
            "tags_all": {
              "Name": "testnet-vpc-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04c8c418ed2fffa991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c62cef4e2f487257",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c8c418ed2fffa99",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-026429e2e763c64251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0105080c96c3d696a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-026429e2e763c6425",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b8545ca1f4cd00f3",
            "id": "r-rtb-040ec46ab0b0bd2eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-040ec46ab0b0bd2eb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:route-table/rtb-04c8c418ed2fffa99",
            "id": "rtb-04c8c418ed2fffa99",
            "owner_id": "157899031549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "testnet-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "testnet-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:route-table/rtb-026429e2e763c6425",
            "id": "rtb-026429e2e763c6425",
            "owner_id": "157899031549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "testnet-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "testnet-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:route-table/rtb-040ec46ab0b0bd2eb",
            "id": "rtb-040ec46ab0b0bd2eb",
            "owner_id": "157899031549",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "testnet-vpc-public"
            },
            "tags_all": {
              "Name": "testnet-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a83f42ebe300687",
            "route_table_id": "rtb-04c8c418ed2fffa99",
            "subnet_id": "subnet-0dbb9e25fc8be68ae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0628ae8ba9209f37d",
            "route_table_id": "rtb-026429e2e763c6425",
            "subnet_id": "subnet-0ae37b3514ffca253"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b51e53e021aec549",
            "route_table_id": "rtb-040ec46ab0b0bd2eb",
            "subnet_id": "subnet-0c81824a6492c1a48"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b176c93a9d437e86",
            "route_table_id": "rtb-040ec46ab0b0bd2eb",
            "subnet_id": "subnet-01b57272e46cb0aa4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:subnet/subnet-0dbb9e25fc8be68ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbb9e25fc8be68ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157899031549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testnet-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Name": "testnet-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:subnet/subnet-0ae37b3514ffca253",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae37b3514ffca253",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157899031549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testnet-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Name": "testnet-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:subnet/subnet-0c81824a6492c1a48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c81824a6492c1a48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157899031549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testnet-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Name": "testnet-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:subnet/subnet-01b57272e46cb0aa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b57272e46cb0aa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "157899031549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testnet-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Name": "testnet-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-068efaab7c06f6ab0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:157899031549:vpc/vpc-068efaab7c06f6ab0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06c2f2893f7b98035",
            "default_route_table_id": "rtb-03b34d60b0ffe6513",
            "default_security_group_id": "sg-04da978978e1d9509",
            "dhcp_options_id": "dopt-03d5ea2d37ee6bafa",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-068efaab7c06f6ab0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b34d60b0ffe6513",
            "owner_id": "157899031549",
            "tags": {
              "Name": "testnet-vpc"
            },
            "tags_all": {
              "Name": "testnet-vpc"
            }
          }
        }
      ]
    }
  ]
}